RESOLVED FIXED75665
sizeof(CSSRule) is 20 instead of 12 on Windows
https://bugs.webkit.org/show_bug.cgi?id=75665
Summary sizeof(CSSRule) is 20 instead of 12 on Windows
Ryosuke Niwa
Reported 2012-01-05 15:49:18 PST
Bitfield packing issue on Visual Studio continues...
Attachments
Fixes the bug (5.43 KB, patch)
2012-01-05 16:27 PST, Ryosuke Niwa
ojan: review+
Ryosuke Niwa
Comment 1 2012-01-05 16:27:33 PST
Created attachment 121363 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2012-01-05 17:19:46 PST
Note You need to log in before you can comment on or make changes to this bug.